# ellipticalmask

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  defaults.ac
src/: Makefile  Makefile.am  Makefile.in  argpparser.h  arraymanip.c  arraymanip.h  attaavv.c  attaavv.h  ellipticalmask.c  ellipticalmask.h  main.c  main.h  pix.c  pix.h  sll.c  sll.h  stats.c  stats.h  ui.c  ui.h
