## Process this file with autoconf to produce a configure script.
##
## Hand written file: used as input into GNU Autotools (autoconf).
##
## This is the autoconf instructions to build
## EllipticalMask. EllipticalMask will read a catalog of elliptical
## parameters and save the ellipses on a mask. It is free software
## released under GNU GPLv3+.
##
## Copyright (C) 2014 Mohammad Akhlaghi
## Tohoku University Astronomical Institute, Sendai, Japan.
## http://astr.tohoku.ac.jp/~akhlaghi/

SUBDIRS = src
EXTRA_DIST = defaults.ac README.md
